[CLEANUP] - Removing forking from legacy unit tests, checkstyle fixes